Add detailed Java memory management and modifier content
- Add Stack and Heap memory section with architecture diagrams
- Add Method Execution on Stack section (stack frames, recursion)
- Expand Garbage Collection with generational GC, algorithms (G1, ZGC)
- Expand Non-Access Modifiers with sealed classes (Java 17+)
- Include GC tuning, memory leak patterns, and reference types

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>